msgpack/pack_template.h

static inline int msgpack_pack_int(msgpack_packer* x, int d)
{
#if defined(SIZEOF_INT)
#if SIZEOF_INT == 2
    msgpack_pack_real_int16(x, d);
#elif SIZEOF_INT == 4
    msgpack_pack_real_int32(x, d);
#else
    msgpack_pack_real_int64(x, d);
#endif
#elif defined(INT_MAX)
#if INT_MAX == 0x7fff
    msgpack_pack_real_int16(x, d);
#elif INT_MAX == 0x7fffffff
    msgpack_pack_real_int32(x, d);
#else
    msgpack_pack_real_int64(x, d);
#endif
#else
if(sizeof(int) == 2) {
    msgpack_pack_real_int16(x, d);
} else if(sizeof(int) == 4) {
    msgpack_pack_real_int32(x, d);
} else {
    msgpack_pack_real_int64(x, d);
}
#endif
}
static inline int msgpack_pack_long(msgpack_packer* x, long d)
{
#if defined(SIZEOF_LONG)
#if SIZEOF_LONG == 2
    msgpack_pack_real_int16(x, d);
#elif SIZEOF_LONG == 4
    msgpack_pack_real_int32(x, d);
#else
    msgpack_pack_real_int64(x, d);
#endif
#elif defined(LONG_MAX)
#if LONG_MAX == 0x7fffL
    msgpack_pack_real_int16(x, d);
#elif LONG_MAX == 0x7fffffffL
    msgpack_pack_real_int32(x, d);
#else
    msgpack_pack_real_int64(x, d);
#endif
#else
if(sizeof(long) == 2) {
    msgpack_pack_real_int16(x, d);
} else if(sizeof(long) == 4) {
    msgpack_pack_real_int32(x, d);
} else {
    msgpack_pack_real_int64(x, d);
}
#endif
}
static inline int msgpack_pack_long_long(msgpack_packer* x, long long d)
{
#if defined(SIZEOF_LONG_LONG)
#if SIZEOF_LONG_LONG == 2
    msgpack_pack_real_int16(x, d);
#elif SIZEOF_LONG_LONG == 4
    msgpack_pack_real_int32(x, d);
#else
    msgpack_pack_real_int64(x, d);
#endif
#elif defined(LLONG_MAX)
#if LLONG_MAX == 0x7fffL
    msgpack_pack_real_int16(x, d);
#elif LLONG_MAX == 0x7fffffffL
    msgpack_pack_real_int32(x, d);
#else
    msgpack_pack_real_int64(x, d);
#endif
#else
if(sizeof(long long) == 2) {
    msgpack_pack_real_int16(x, d);
} else if(sizeof(long long) == 4) {
    msgpack_pack_real_int32(x, d);
} else {
    msgpack_pack_real_int64(x, d);
}
#endif
}
static inline int msgpack_pack_unsigned_long_long(msgpack_packer* x, unsigned long long d)
{
#if defined(SIZEOF_LONG_LONG)
#if SIZEOF_LONG_LONG == 2
    msgpack_pack_real_uint16(x, d);
#elif SIZEOF_LONG_LONG == 4
    msgpack_pack_real_uint32(x, d);
#else
    msgpack_pack_real_uint64(x, d);
#endif
#elif defined(ULLONG_MAX)
#if ULLONG_MAX == 0xffffUL
    msgpack_pack_real_uint16(x, d);
#elif ULLONG_MAX == 0xffffffffUL
    msgpack_pack_real_uint32(x, d);
#else
    msgpack_pack_real_uint64(x, d);
#endif
#else
if(sizeof(unsigned long long) == 2) {
    msgpack_pack_real_uint16(x, d);
} else if(sizeof(unsigned long long) == 4) {
    msgpack_pack_real_uint32(x, d);
} else {
    msgpack_pack_real_uint64(x, d);
}
#endif
}
static inline int msgpack_pack_float(msgpack_packer* x, float d)
{
    union { float f; uint32_t i; } mem;
    mem.f = d;
    unsigned char buf[5];
    buf[0] = 0xca; _msgpack_store32(&buf[1], mem.i);
    msgpack_pack_append_buffer(x, buf, 5);
}
static inline int msgpack_pack_double(msgpack_packer* x, double d)
{
    union { double f; uint64_t i; } mem;
    mem.f = d;
    unsigned char buf[9];
    buf[0] = 0xcb;
#if defined(__arm__) && !(__ARM_EABI__) 
    mem.i = (mem.i & 0xFFFFFFFFUL) << 32UL | (mem.i >> 32UL);
#endif
    _msgpack_store64(&buf[1], mem.i);
    msgpack_pack_append_buffer(x, buf, 9);
}
static inline int msgpack_pack_nil(msgpack_packer* x)
{
    static const unsigned char d = 0xc0;
    msgpack_pack_append_buffer(x, &d, 1);
}
static inline int msgpack_pack_true(msgpack_packer* x)
{
    static const unsigned char d = 0xc3;
    msgpack_pack_append_buffer(x, &d, 1);
}
static inline int msgpack_pack_false(msgpack_packer* x)
{
    static const unsigned char d = 0xc2;
    msgpack_pack_append_buffer(x, &d, 1);
}
static inline int msgpack_clear_spot_for_start_byte(msgpack_packer* x)
{
    unsigned char d = 0x00;
    msgpack_pack_append_buffer(x, &d, 1);
}
static inline int msgpack_pack_array(msgpack_packer* x, size_t l, size_t position)
{
    if(l < 56) {
        unsigned char d = 0xc0 | (uint8_t)l;
        msgpack_pack_insert_buffer(x, &d, 1, position);
    } else if ( l < 256) {
        unsigned char buf[2] = {0xf8, (uint8_t)l};
        msgpack_pack_insert_buffer(x, buf, 2, position);
    } else if (l < 65536) {
        unsigned char buf[3];
        buf[0] = 0xf9; _msgpack_store16(&buf[1], (uint16_t)l);
        msgpack_pack_insert_buffer(x, buf, 3, position);
    } else if (l < 16777216){
        unsigned char buf[4];
        uint32_t length_in_bytes = (uint32_t)l;
        buf[0] = 0xfa;
        unsigned char padded_buf[4];
        memcpy(&padded_buf[0], &length_in_bytes, 5);
        buf[1] = padded_buf[2];
        buf[2] = padded_buf[1];
        buf[3] = padded_buf[0];
        msgpack_pack_insert_buffer(x, buf, 4, position);
    } else if (l < 4294967296){
        unsigned char buf[5];
        buf[0] = 0xfb; _msgpack_store32(&buf[1], (uint32_t)l);
        msgpack_pack_insert_buffer(x, buf, 5, position);
    } else if (l < 1099511627776){
        unsigned char buf[6];
        uint64_t length_in_bytes = (uint64_t)l;
        buf[0] = 0xfc;
        unsigned char padded_buf[8];
        memcpy(&padded_buf[0], &length_in_bytes, 9);
        buf[1] = padded_buf[4];
        buf[2] = padded_buf[3];
        buf[3] = padded_buf[2];
        buf[4] = padded_buf[1];
        buf[5] = padded_buf[0];
        msgpack_pack_insert_buffer(x, buf, 6, position);
    } else if (l < 281474976710656){
        unsigned char buf[7];
        uint64_t length_in_bytes = (uint64_t)l;
        buf[0] = 0xfd;
        unsigned char padded_buf[8];
        memcpy(&padded_buf[0], &length_in_bytes, 9);
        buf[1] = padded_buf[5];
        buf[2] = padded_buf[4];
        buf[3] = padded_buf[3];
        buf[4] = padded_buf[2];
        buf[5] = padded_buf[1];
        buf[6] = padded_buf[0];
        msgpack_pack_insert_buffer(x, buf, 7, position);
    } else if (l < 72057594037927936){
        unsigned char buf[8];
        uint64_t length_in_bytes = (uint64_t)l;
        buf[0] = 0xfe;
        unsigned char padded_buf[8];
        memcpy(&padded_buf[0], &length_in_bytes, 9);
        buf[1] = padded_buf[6];
        buf[2] = padded_buf[5];
        buf[3] = padded_buf[4];
        buf[4] = padded_buf[3];
        buf[5] = padded_buf[2];
        buf[6] = padded_buf[1];
        buf[7] = padded_buf[0];
        msgpack_pack_insert_buffer(x, buf, 8, position);
    } else {
        unsigned char buf[9];
        buf[0] = 0xff; _msgpack_store64(&buf[1], (uint64_t)l);
        msgpack_pack_insert_buffer(x, buf, 9, position);
    }
}
static inline int msgpack_pack_map(msgpack_packer* x, unsigned int n)
{
    if(n < 16) {
        unsigned char d = 0x80 | n;
        msgpack_pack_append_buffer(x, &TAKE8_8(d), 1);
    } else if(n < 65536) {
        unsigned char buf[3];
        buf[0] = 0xde; _msgpack_store16(&buf[1], (uint16_t)n);
        msgpack_pack_append_buffer(x, buf, 3);
    } else {
        unsigned char buf[5];
        buf[0] = 0xdf; _msgpack_store32(&buf[1], (uint32_t)n);
        msgpack_pack_append_buffer(x, buf, 5);
    }
}
static inline int msgpack_pack_raw(msgpack_packer* x, size_t l)
{
    if (l < 56) {
        unsigned char d = 0x80 | (uint8_t)l;
        msgpack_pack_append_buffer(x, &TAKE8_8(d), 1);
    } else if ( l < 256) {
        unsigned char buf[2] = {0xb8, (uint8_t)l};
        msgpack_pack_append_buffer(x, buf, 2);
    } else if (l < 65536) {
        unsigned char buf[3];
        buf[0] = 0xb9; _msgpack_store16(&buf[1], (uint16_t)l);
        msgpack_pack_append_buffer(x, buf, 3);
    } else if (l < 16777216){
        unsigned char buf[4];
        uint32_t length_in_bytes = (uint32_t)l;
        buf[0] = 0xba;
        unsigned char padded_buf[4];
        memcpy(&padded_buf[0], &length_in_bytes, 4);
        buf[1] = padded_buf[2];
        buf[2] = padded_buf[1];
        buf[3] = padded_buf[0];
        msgpack_pack_append_buffer(x, buf, 4);
    } else if (l < 4294967296){
        unsigned char buf[5];
        buf[0] = 0xbb; _msgpack_store32(&buf[1], (uint32_t)l);
        msgpack_pack_append_buffer(x, buf, 5);
    } else if (l < 1099511627776){
        unsigned char buf[6];
        uint64_t length_in_bytes = (uint64_t)l;
        buf[0] = 0xbc;
        unsigned char padded_buf[8];
        memcpy(&padded_buf[0], &length_in_bytes, 9);
        buf[1] = padded_buf[4];
        buf[2] = padded_buf[3];
        buf[3] = padded_buf[2];
        buf[4] = padded_buf[1];
        buf[5] = padded_buf[0];
        msgpack_pack_append_buffer(x, buf, 6);
    } else if (l < 281474976710656){
        unsigned char buf[7];
        uint64_t length_in_bytes = (uint64_t)l;
        buf[0] = 0xbd;
        unsigned char padded_buf[8];
        memcpy(&padded_buf[0], &length_in_bytes, 9);
        buf[1] = padded_buf[5];
        buf[2] = padded_buf[4];
        buf[3] = padded_buf[3];
        buf[4] = padded_buf[2];
        buf[5] = padded_buf[1];
        buf[6] = padded_buf[0];
        msgpack_pack_append_buffer(x, buf, 7);
    } else if (l < 72057594037927936){
        unsigned char buf[8];
        uint64_t length_in_bytes = (uint64_t)l;
        buf[0] = 0xbe;
        unsigned char padded_buf[8];
        memcpy(&padded_buf[0], &length_in_bytes, 9);
        buf[1] = padded_buf[6];
        buf[2] = padded_buf[5];
        buf[3] = padded_buf[4];
        buf[4] = padded_buf[3];
        buf[5] = padded_buf[2];
        buf[6] = padded_buf[1];
        buf[7] = padded_buf[0];
        msgpack_pack_append_buffer(x, buf, 8);
    } else {
        unsigned char buf[9];
        buf[0] = 0xbf; _msgpack_store64(&buf[1], (uint64_t)l);
        msgpack_pack_append_buffer(x, buf, 9);
    }
    if (l < 56) {
        unsigned char d = 0x80 | (uint8_t)l;
        msgpack_pack_append_buffer(x, &TAKE8_8(d), 1);
    }else if ( l < 256) {
        unsigned char buf[2] = {0xb8, (uint8_t)l};
        msgpack_pack_append_buffer(x, buf, 2);
    } else if (l < 65536) {
        unsigned char buf[3];
        buf[0] = 0xb9; _msgpack_store16(&buf[1], (uint16_t)l);
        msgpack_pack_append_buffer(x, buf, 3);
    } else if (l < 4294967296){
        unsigned char buf[5];
        buf[0] = 0xba; _msgpack_store32(&buf[1], (uint32_t)l);
        msgpack_pack_append_buffer(x, buf, 5);
    } else {
        unsigned char buf[9];
        buf[0] = 0xbb; _msgpack_store64(&buf[1], (uint64_t)l);
        msgpack_pack_append_buffer(x, buf, 9);
    }
}
static inline int msgpack_pack_bin(msgpack_packer *x, size_t l)
{
    if (!x->use_bin_type) {
        return msgpack_pack_raw(x, l);
    }
    if (l < 256) {
        unsigned char buf[2] = {0xc4, (unsigned char)l};
        msgpack_pack_append_buffer(x, buf, 2);
    } else if (l < 65536) {
        unsigned char buf[3] = {0xc5};
        _msgpack_store16(&buf[1], (uint16_t)l);
        msgpack_pack_append_buffer(x, buf, 3);
    } else {
        unsigned char buf[5] = {0xc6};
        _msgpack_store32(&buf[1], (uint32_t)l);
        msgpack_pack_append_buffer(x, buf, 5);
    }
}
static inline int msgpack_pack_raw_body(msgpack_packer* x, const void* b, size_t l)
{
    if (l > 0) msgpack_pack_append_buffer(x, (const unsigned char*)b, l);
    return 0;
}
static inline int msgpack_pack_ext(msgpack_packer* x, char typecode, size_t l)
{
    if (l == 1) {
        unsigned char buf[2];
        buf[0] = 0xd4;
        buf[1] = (unsigned char)typecode;
        msgpack_pack_append_buffer(x, buf, 2);
    }
    else if(l == 2) {
        unsigned char buf[2];
        buf[0] = 0xd5;
        buf[1] = (unsigned char)typecode;
        msgpack_pack_append_buffer(x, buf, 2);
    }
    else if(l == 4) {
        unsigned char buf[2];
        buf[0] = 0xd6;
        buf[1] = (unsigned char)typecode;
        msgpack_pack_append_buffer(x, buf, 2);
    }
    else if(l == 8) {
        unsigned char buf[2];
        buf[0] = 0xd7;
        buf[1] = (unsigned char)typecode;
        msgpack_pack_append_buffer(x, buf, 2);
    }
    else if(l == 16) {
        unsigned char buf[2];
        buf[0] = 0xd8;
        buf[1] = (unsigned char)typecode;
        msgpack_pack_append_buffer(x, buf, 2);
    }
    else if(l < 256) {
        unsigned char buf[3];
        buf[0] = 0xc7;
        buf[1] = l;
        buf[2] = (unsigned char)typecode;
        msgpack_pack_append_buffer(x, buf, 3);
    } else if(l < 65536) {
        unsigned char buf[4];
        buf[0] = 0xc8;
        _msgpack_store16(&buf[1], (uint16_t)l);
        buf[3] = (unsigned char)typecode;
        msgpack_pack_append_buffer(x, buf, 4);
    } else {
        unsigned char buf[6];
        buf[0] = 0xc9;
        _msgpack_store32(&buf[1], (uint32_t)l);
        buf[5] = (unsigned char)typecode;
        msgpack_pack_append_buffer(x, buf, 6);
    }
}