msgpack/pack.h

#define inline __inline
typedef struct msgpack_packer {
    char *buf;
    size_t length;
    size_t buf_size;
    bool use_bin_type;
} msgpack_packer;
typedef struct Packer Packer;
static inline int
msgpack_pack_unicode(msgpack_packer *pk, PyObject *o, unsigned long long limit)
{
#if PY_MAJOR_VERSION >= 3
    assert(PyUnicode_Check(o));
    Py_ssize_t len;
    const char* buf = PyUnicode_AsUTF8AndSize(o, &len);
    if (buf == NULL)
        return -1;
    if (len > limit) {
        return -2;
    }
    if (len == 1 && buf[0] < 0x80){
        return msgpack_pack_raw_body(pk, buf, len);
    }
    else{
        int ret = msgpack_pack_raw(pk, len);
        if (ret) return ret;
        return msgpack_pack_raw_body(pk, buf, len);
    }
#else
    PyObject *bytes;
    Py_ssize_t len;
    int ret;
    bytes = PyUnicode_AsUTF8String(o);
    if (bytes == NULL)
        return -1;
    len = PyString_GET_SIZE(bytes);
    if (len > limit) {
        Py_DECREF(bytes);
        return -2;
    }
    ret = msgpack_pack_raw(pk, len);
    if (ret) {
        Py_DECREF(bytes);
        return -1;
    }
    ret = msgpack_pack_raw_body(pk, PyString_AS_STRING(bytes), len);
    Py_DECREF(bytes);
    return ret;
#endif
}